[gd_scene load_steps=6 format=3 uid="uid://drdxfktspl0qe"]

[ext_resource type="Script" path="res://scripts/big_platform.gd" id="1_8bwjo"]
[ext_resource type="Texture2D" uid="uid://cub4p8u08ve0k" path="res://assets/mail game/big_platform.png" id="1_x6eni"]
[ext_resource type="PackedScene" uid="uid://cd8yjx1xgufm3" path="res://scenes/mail_delivery/gun.tscn" id="2_dp68m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_udesw"]
size = Vector2(16, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_op75j"]
size = Vector2(16, 3)

[node name="big_platform" type="AnimatableBody2D"]
z_index = 1
collision_layer = 128
collision_mask = 80
sync_to_physics = false
script = ExtResource("1_8bwjo")
GUN = ExtResource("2_dp68m")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_x6eni")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_udesw")

[node name="Area2D" type="Area2D" parent="."]
z_index = 1
collision_layer = 128
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_op75j")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-2, 0)

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(2, 0)

[node name="Marker2D3" type="Marker2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
